Bug 430211 - Dolphin asks if I want to open/execute/cancel when I double-click on "Add network folder" icon
Summary: Dolphin asks if I want to open/execute/cancel when I double-click on "Add net...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords: regression, usability
Depends on:
Blocks:
 
Reported: 2020-12-10 11:35 UTC by Patrick Silva
Modified: 2021-01-09 20:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.78
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-12-10 11:35:21 UTC
STEPS TO REPRODUCE
1. open Dolphin
2. click on "Network" in Places panel
3. double-click on "Add network folder"

OBSERVED RESULT
Dolphin asks if I want to open/execute/cancel

EXPECTED RESULT
Dolphin should open KNetAttach without showing any dialog

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2020-12-10 16:06:35 UTC
Gross.

Probably fallout from adding setOpenExecutables(true) for the openUrlJob, because this icon is technically an executable desktop file,  and the default behavior for executable files is to ask rather than always executing.

I really don't like the UX here anyway. I think something much better would be to add this action as a button in the toolbar next to the URL Navigator while the view is visible, just like we do for the "Empty Trash" action while viewing the Trash folder.

I can look into that.
Comment 2 Nate Graham 2020-12-10 21:03:06 UTC
Gah this is way more complicated than I expected. :/ Just adding the button to the URL navigator's row is very tricky due to the new positioning code, and even after that, I need to figure out a way to tell the remote:/ kioslave to not display the knetattach icon when displayed in Dolphin.
Comment 4 Nate Graham 2020-12-27 14:51:04 UTC
Git commit e54d2e483db5d52819a24414e8ea9259ebb3415d by Nate Graham.
Committed on 27/12/2020 at 14:50.
Pushed by ngraham into branch 'master'.

Remove knetattach item from the remote:// ioslave's view

This commit removes the knetattach item from the remote:// ioslave's
view entirely.

knetattach lives in Plasma, so this amounts to an unmarked dependency on
Plasma within KIO, which is not appropriate.

Furthermore, Having a desktop entry in the view of the ioslave that
launches an app is kind of a weird UX, and its functionality is largely
unnecessary bceause you can just connect to the server by its URL and be
prompted for your username and password. If you want to create a permanent
link to the server, you can add it to the places panel or use a shortcut.

However for those who would like to continue using knetattach, I plan
to add a contextually-aware button in Dolphin to open the app, and if
that happens without this, we will have two redundant ways to launch
knetattach from the remote:// view.
FIXED-IN: 5.78

M  +2    -19   src/ioslaves/remote/kio_remote.cpp
M  +0    -47   src/ioslaves/remote/remoteimpl.cpp
M  +0    -2    src/ioslaves/remote/remoteimpl.h

https://invent.kde.org/frameworks/kio/commit/e54d2e483db5d52819a24414e8ea9259ebb3415d
Comment 5 Nate Graham 2021-01-09 20:26:30 UTC
Git commit b1cadeba939155282a9fadf7d7b025d6529c489e by Nate Graham.
Committed on 09/01/2021 at 18:32.
Pushed by ngraham into branch 'master'.

Show button to open knetattach inline with URL nav on Remote:// view

In conjunction with
https://invent.kde.org/frameworks/kio/-/merge_requests/260,
the net result is to hide the knetattach launcher in the view, and show
it inline with Dolphin's URL navigator toolbar when viewing the
remote:// view, just like how we add an "Empty Trash" button when
viewing trash://.

M  +45   -4    src/dolphinnavigatorswidgetaction.cpp
M  +16   -1    src/dolphinnavigatorswidgetaction.h

https://invent.kde.org/system/dolphin/commit/b1cadeba939155282a9fadf7d7b025d6529c489e